# youtube_search

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  tailwind-59243661ef743eb9.css  tailwind.config.js  youtube_search-9c6940a909cd8255.js  youtube_search-9c6940a909cd8255_bg.wasm
src/: main.rs  youtube.rs
src/components/: mod.rs  video_controls.rs  video_section.rs
static/: tailwind_input.css
