[package]
name = "youtube_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = {version = "0.3.60", features=["Event", "InputEvent"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
